--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <nav class="navbar navbar-light" id="myNav">
         <a class="navbar-brand" href="#">
-            <img src="/docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30"
-                class="d-inline-block align-top" alt="" loading="lazy">
-            Benefield HS
+            <img src="./images/tree.png" width="30" height="30" class="d-inline-block align-top" alt="Benefield HS"
+                loading="lazy">
+
         </a>
     </nav>
     <div class="container-fluid main">
@@ -28,20 +28,21 @@
                         <div class="row">
                             <div class="col-sm jobCol">
                                 <p>Moving</p>
-                                <img id="movingImg" src="./download.png">
+                                <img id="movingImg" src="./images/download.png">
                             </div>
                             <div class="col-sm jobCol">
                                 <p>Lawn</p>
-                                <img id="movingImg" src="./garden.jpg">
+                                <img id="movingImg" src="./images/garden.jpg">
                             </div>
                             <div class="col-sm jobCol">
                                 <p>Oddjobs</p>
-                                <img id="movingImg" src="./download.png">
+                                <img id="movingImg" src="./images/download.png">
                             </div>
                         </div>
 
 
-                        <a href="#" id="myButton" class="btn">Book an Appointment</a>
+                        <a target="_blank" href="http://www.calendly.com" id="myButton" class="btn">Book an
+                            Appointment</a>
                     </div>
                 </div>
             </div>
