--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <nav class="navbar navbar-light" id="myNav">
         <a class="navbar-brand" href="#">
-            <img src="./images/tree.png" width="30" height="30" class="d-inline-block align-top" alt="Benefield HS"
-                loading="lazy">
+            <img id="navImg" src="./images/BHS_logo.jpeg" width="100" height="100" class="d-inline-block align-top"
+                alt="Benefield HS" loading="lazy">
 
         </a>
     </nav>
@@ -48,6 +48,8 @@
             </div>
             <div class="col-md-3"></div>
         </div>
+
+
 
     </div>
 
