--- a/index.html
+++ b/index.html
@@ -49,7 +49,43 @@
             <div class="col-md-3"></div>
         </div>
 
+        <div class="row" id="centerRow">
+            <div class="col-md-12">
+                <p>Hi</p>
+            </div>
+        </div>
 
+        <div class="row" id="bottomRow">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <div id="jacksonsCard" class="card">
+
+                    <div class="card-body">
+                        <h5 id="jacksonCardTitle">Jackson Benefield</h5>
+                        <div class="row">
+                            <div class="col-sm jacksonCol">
+                                <img id="jacksonProfilePhoto" src="./images/IMG_2118.jpeg" class="card-img-top"
+                                    alt="...">
+                            </div>
+                            <div class="col-sm jacksonCol">
+                                <p id="jacksonDescription">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                    do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                                    deserunt mollit anim id est laborum."</p>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-md-3"></div>
+        </div>
 
     </div>
 
