--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
 <body>
     <nav class="navbar navbar-light" id="myNav">
-        <a class="navbar-brand" href="#">
-            <img id="navImg" src="./images/BHS_logo.jpeg" width="100" height="100" class="d-inline-block align-top"
-                alt="Benefield HS" loading="lazy">
 
-        </a>
+        <img id="navImg" src="./images/BHS_logo.jpeg" width="100" height="100" class="d-inline-block align-top"
+            alt="Benefield HS" loading="lazy">
+
+
     </nav>
     <div class="container-fluid main">
-        <div class="row" id="centerCardRow">
+        <div class="row" id="firstRow">
             <div class="col-md-3"></div>
             <div class="col-md-6">
                 <div id="centerCard" class="card">
@@ -31,8 +31,8 @@
                                 <img id="movingImg" src="./images/download.png">
                             </div>
                             <div class="col-sm jobCol">
-                                <p>Lawn</p>
-                                <img id="movingImg" src="./images/garden.jpg">
+                                <p>Handyman</p>
+                                <img id="movingImg" src="./images/download.png">
                             </div>
                             <div class="col-sm jobCol">
                                 <p>Oddjobs</p>
@@ -49,34 +49,85 @@
             <div class="col-md-3"></div>
         </div>
 
-        <div class="row" id="centerRow">
+        <div class="row" id="secondRow">
             <div class="col-md-12">
-                <p>Hi</p>
+
             </div>
         </div>
 
-        <div class="row" id="bottomRow">
+        <div class="row" id="thirdRow">
             <div class="col-md-3"></div>
             <div class="col-md-6">
                 <div id="jacksonsCard" class="card">
 
                     <div class="card-body">
-                        <h5 id="jacksonCardTitle">Jackson Benefield</h5>
+                        <h5 id="jacksonCardTitle">Moving, Handyman, Odd Jobs</h5>
+
                         <div class="row">
                             <div class="col-sm jacksonCol">
                                 <img id="jacksonProfilePhoto" src="./images/IMG_2118.jpeg" class="card-img-top"
-                                    alt="...">
+                                    alt="Photo of Jackson Benefield">
                             </div>
                             <div class="col-sm jacksonCol">
+                                <h6>Trustworthy - Friendly - Dependable</h6>
                                 <p id="jacksonDescription">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                                     do eiusmod tempor
                                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                                     exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                                    deserunt mollit anim id est laborum."</p>
-
+                                    irure dolor in reprehenderit."</p>
+                                <img id="jacksonProfileLogo" src="./images/BHS_logo.jpeg" alt="Business Logo">
                             </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-md-3"></div>
+        </div>
+
+        <div class="row" id="fourthRow">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <div id="photoCard" class="card">
+
+                    <div class="card-body">
+
+
+                        <div class="row">
+                            <div class="col-sm jacksonCol">
+                                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active">
+                                            <img src="./images/IMG_1785.jpeg" class="d-block w-100" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./images/IMG_1772.jpeg" class="d-block w-100" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./images/IMG_1790.jpeg" class="d-block w-100" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./images/IMG_1948.jpeg" class="d-block w-100" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./images/BHS_gardenBed.jpeg" class="d-block w-100" alt="...">
+                                        </div>
+                                    </div>
+                                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+                                        data-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="carousel-control-next" href="#carouselExampleControls" role="button"
+                                        data-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </div>
+                            </div>
+
 
                         </div>
 
