--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </nav>
     <div class="container-fluid main">
         <div class="row" id="firstRow">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
                 <div id="centerCard" class="card">
 
                     <div class="card-body">
@@ -46,7 +46,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3"></div>
+            <div class="col-md-2"></div>
         </div>
 
         <div class="row" id="secondRow">
@@ -56,8 +56,8 @@
         </div>
 
         <div class="row" id="thirdRow">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
                 <div id="jacksonsCard" class="card">
 
                     <div class="card-body">
@@ -84,19 +84,27 @@
                 </div>
 
             </div>
-            <div class="col-md-3"></div>
+            <div class="col-md-2"></div>
         </div>
 
+        <div class="row" id="secondRow">
+            <div class="col-md-12">
+
+            </div>
+        </div>
+
+
+
         <div class="row" id="fourthRow">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
                 <div id="photoCard" class="card">
 
                     <div class="card-body">
 
 
                         <div class="row">
-                            <div class="col-sm jacksonCol">
+                            <div class="col-sm">
                                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
@@ -135,7 +143,7 @@
                 </div>
 
             </div>
-            <div class="col-md-3"></div>
+            <div class="col-md-2"></div>
         </div>
 
     </div>
